minor dark mode fix

--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ body.dark-mode .subpage-section {
 }
 
 body.dark-mode .profile-section h1 {
-    color: #ffffff;
+    color: #000000;
     font-size: 3.5em;
 }
 
